--- a/public/keyword.html
+++ b/public/keyword.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <meta charset="utf-8" />
-        <title>키워드로 장소검색하기</title>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
     </head>
     <body>
-        <div id="map" style="width: 1000px; height: 800px"></div>
-
-        <script
-            type="text/javascript"
-            src="//dapi.kakao.com/v2/maps/sdk.js?appkey=8dc57e5937a2a6644c966d7cda41aebc&libraries=services"
-        ></script>
+        <div id="map" style="width: 800px; height: 600px"></div>
         <script>
             // 마커를 클릭하면 장소명을 표출할 인포윈도우 입니다
             var infowindow = new kakao.maps.InfoWindow({ zIndex: 1 });
@@ -18,7 +14,7 @@
             var mapContainer = document.getElementById("map"), // 지도를 표시할 div
                 mapOption = {
                     center: new kakao.maps.LatLng(37.566826, 126.9786567), // 지도의 중심좌표
-                    level: 1, // 지도의 확대 레벨
+                    level: 3, // 지도의 확대 레벨
                 };
 
             // 지도를 생성합니다
@@ -27,10 +23,8 @@
             // 장소 검색 객체를 생성합니다
             var ps = new kakao.maps.services.Places();
 
-            var a = "대구역";
-
             // 키워드로 장소를 검색합니다
-            ps.keywordSearch(a + "근처 마트", placesSearchCB);
+            ps.keywordSearch("동대구역 근처 마트", placesSearchCB);
 
             // 키워드 검색 완료 시 호출되는 콜백함수 입니다
             function placesSearchCB(data, status, pagination) {
