--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
             // 장소 검색 객체를 생성합니다
             var ps = new kakao.maps.services.Places();
 
-            var a = "대구역";
+            var a = "구미시";
 
             // 키워드로 장소를 검색합니다
             ps.keywordSearch(a + "근처 마트", placesSearchCB);
