--- a/Umm/public/index.html
+++ b/Umm/public/index.html
@@ -1,75 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>키워드로 장소검색하기</title>
-    </head>
-    <body>
-        <div id="map" style="width: 1000px; height: 800px"></div>
-
+        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="theme-color" content="#000000" />
+        <meta
+            name="description"
+            content="Web site created using create-react-app"
+        />
+        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+        <title>React App</title>
         <script
             type="text/javascript"
             src="//dapi.kakao.com/v2/maps/sdk.js?appkey=8dc57e5937a2a6644c966d7cda41aebc&libraries=services"
         ></script>
-        <script>
-            // 마커를 클릭하면 장소명을 표출할 인포윈도우 입니다
-            var infowindow = new kakao.maps.InfoWindow({ zIndex: 1 });
-
-            var mapContainer = document.getElementById("map"), // 지도를 표시할 div
-                mapOption = {
-                    center: new kakao.maps.LatLng(37.566826, 126.9786567), // 지도의 중심좌표
-                    level: 1, // 지도의 확대 레벨
-                };
-
-            // 지도를 생성합니다
-            var map = new kakao.maps.Map(mapContainer, mapOption);
-
-            // 장소 검색 객체를 생성합니다
-            var ps = new kakao.maps.services.Places();
-
-            var a = "구미시";
-
-            // 키워드로 장소를 검색합니다
-            ps.keywordSearch(a + "근처 마트", placesSearchCB);
-
-            // 키워드 검색 완료 시 호출되는 콜백함수 입니다
-            function placesSearchCB(data, status, pagination) {
-                if (status === kakao.maps.services.Status.OK) {
-                    // 검색된 장소 위치를 기준으로 지도 범위를 재설정하기위해
-                    // LatLngBounds 객체에 좌표를 추가합니다
-                    var bounds = new kakao.maps.LatLngBounds();
-
-                    for (var i = 0; i < data.length; i++) {
-                        displayMarker(data[i]);
-                        bounds.extend(
-                            new kakao.maps.LatLng(data[i].y, data[i].x)
-                        );
-                    }
-
-                    // 검색된 장소 위치를 기준으로 지도 범위를 재설정합니다
-                    map.setBounds(bounds);
-                }
-            }
-
-            // 지도에 마커를 표시하는 함수입니다
-            function displayMarker(place) {
-                // 마커를 생성하고 지도에 표시합니다
-                var marker = new kakao.maps.Marker({
-                    map: map,
-                    position: new kakao.maps.LatLng(place.y, place.x),
-                });
-
-                // 마커에 클릭이벤트를 등록합니다
-                kakao.maps.event.addListener(marker, "click", function () {
-                    // 마커를 클릭하면 장소명이 인포윈도우에 표출됩니다
-                    infowindow.setContent(
-                        '<div style="padding:5px;font-size:12px;">' +
-                            place.place_name +
-                            "</div>"
-                    );
-                    infowindow.open(map, marker);
-                });
-            }
-        </script>
+    </head>
+    <body>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <div id="root"></div>
     </body>
 </html>
